--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,11 @@ system_data.csv
 # Ignore trained model artifacts
 *.pkl
 
+# Python virtual environment
+venv/
+.env
+__pycache__/
+*.pyc
+
 # Ignore Python cache
 __pycache__/
